force-app/main/default/objects/Course_Plan_Topic__c/Course_Plan_Topic__c.object-meta.xml
<CustomObject>
    <label>Course Plan Topic</label>
    <nameField>
        <label>Course Plan Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Plan Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>