force-app/main/default/objects/Course_Plan_Topic__c/fields/Course_Plan_Topic_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Plan_Topic_Display_Name__c</fullName>
    <label>Course Plan Topic Display Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>