force-app/main/default/objects/Course_Plan_Topic__c/fields/Course_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>Course_Plan_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Plan Unit</label>
    <referenceTo>Course_Plan_Unit__c</referenceTo>
    <relationshipLabel>Course Plan Topics</relationshipLabel>
    <relationshipName>Course_Plan_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>