force-app/main/default/objects/Course_Plan_Topic__c/fields/Old_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old Unit ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>